--- a/git-release/action.yml
+++ b/git-release/action.yml
@@ -45,13 +45,13 @@ runs:
         rm envvars.env
         mv envvars.env.new envvars.env
         cat envvars.env >> $GITHUB_ENV
+        echo CURRENT_VERSION=${{ inputs.release-version }} >> $GITHUB_ENV
       working-directory: ${{ github.action_path }}
       shell: bash
     
-    
     - name: 'determine version'
       run: |
-        if [ "${{ inputs.release-version }}" == 1 ];
+        if [ ${CURRENT_VERSION:1:1} == 1 ];;
         then
           echo STAGING_BRANCH="v1.x/staging" >> $GITHUB_ENV
           echo RELEASE_BRANCH="v1.x/rc" >> $GITHUB_ENV
@@ -61,7 +61,6 @@ runs:
           echo RELEASE_BRANCH="v2.x/rc" >> $GITHUB_ENV
           echo MASTER_BRANCH="v2.x/master" >> $GITHUB_ENV
         fi
-        echo CURRENT_VERSION=${{ inputs.release-version }} >> $GITHUB_ENV
       shell: bash
       
     
