--- a/plugins/zlux-plugins/action.yml
+++ b/plugins/zlux-plugins/action.yml
@@ -43,6 +43,8 @@ runs:
     
     - name: 'npm ci'
       run: |
+        git config --global url."https://github.com/".insteadOf "ssh://git@github.com:"
+        git config --global url."https://".insteadOf "ssh://"
         if [ $RELEASE = "true"];
         then 
           cd ../zlux/zlux-app-manager/virtual-desktop && npm install
@@ -53,6 +55,8 @@ runs:
     
     - name: 'build plugin'
       run: |
+        git config --global url."https://github.com/".insteadOf "ssh://git@github.com:"
+        git config --global url."https://".insteadOf "ssh://"
         cd ../zlux
         export MVD_DESKTOP_DIR=$(pwd)/zlux-app-manager/virtual-desktop
         echo $MVD_DESKTOP_DIR
