add umask debug
Signed-off-by: James Struga <jstruga@rocketsoftware.com>

--- a/core/prepare/action.yml
+++ b/core/prepare/action.yml
@@ -80,3 +80,9 @@ runs:
         echo "ZOWE_VERSION=$ZOWE_VERSION" | tr -d ' ' >> $GITHUB_ENV
         rm -rf zowe-install-packaging
       shell: bash
+
+    - name: 'get umask'
+      run: |
+        
+        echo umask
+      shell: bash
