--- a/plugins/npm-publish/action.yaml
+++ b/plugins/npm-publish/action.yaml
@@ -10,7 +10,7 @@ runs:
         cp package.json ../npm-test
         cd ../npm-test
         cp ../${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax .
-        mv ${REPOSITORY_NAME}-${ZOWE_VERSION}-${TIMESTAMP}.pax angular-sample.pax
+        mv ${REPOSITORY_NAME}-${ZOWE_VERSION}-*.pax angular-sample.pax
         ls
         cat package.json
       shell: bash
