import new vars
Signed-off-by: James Struga <jstruga@rocketsoftware.com>

--- a/plugins/bump-version/action.yaml
+++ b/plugins/bump-version/action.yaml
@@ -1,5 +1,13 @@
 name: "Bump npm version"
 description: "Bump npm version"
+inputs:
+  branch:
+    description: 'the default branch'
+    required: false
+  version:
+    description: 'which version level needed to bump version, eg. npm version patch'
+    required: false
+    default: 'minor'
 
 runs:
   using: 'node12'
