--- a/bump-zis-version/action.yaml
+++ b/bump-zis-version/action.yaml
@@ -21,6 +21,6 @@ runs:
       run: node 'dist/index.js' 
       working-directory: ${{ github.action_path }}
       env:
-        BRANCH_NAME: ${{ input.branch-name }}
-        VERSION: ${{ input.version }}
+        BRANCH_NAME: ${{ inputs.branch-name }}
+        VERSION: ${{ inputs.version }}
       shell: bash
