--- a/zen/publish/action.yml
+++ b/zen/publish/action.yml
@@ -4,8 +4,39 @@ description: "This action helps publish zen"
 runs:
   using: "composite"
   steps:
+      
+    - name: 'determine current branch or PR'
+      run: |
+        if [ -z ${{ github.event.pull_request.number }} ]
+        then
+          echo CURRENT_BRANCH=${GITHUB_REF#refs/heads/} >> $GITHUB_ENV
+        else
+          echo CURRENT_BRANCH=PR-${{ github.event.pull_request.number }} >> $GITHUB_ENV
+        fi
+      shell: bash
+      
+    - name: 'set version'
+      run: |
+        if [ -f "package.json" ]
+        then
+          ZEN_VERSION=$(cat package.json | grep version | head -1 | awk -F: '{ print $2 }' | sed 's/[",]//g' )
+          echo "ZEN_VERSION=$ZOWE_VERSION" | tr -d ' ' >> $GITHUB_ENV
+        else
+          echo 'package.json not found'
+          exit 1
+        fi
+      shell: bash
+      
+    - name: 'set zen path'
+      run: |
+        echo REPOSITORY_NAME=$GITHUB_REPOSITORY | sed 's/zowe\///' >> $GITHUB_ENV
+        echo WORKING_DIR=/home/runner/work/"$REPOSITORY_NAME" >> $GITHUB_ENV
+      shell: bash
+      
     - name: 'publish'
       run: |
-        pwd
+        ARTIFACTORY_REPO=libs-snapshot-local/org/zowe/zen
+        TIMESTAMP=`date +%Y%m%d.%H%M%S`
+        cd out/make
         ls
       shell: bash
