--- a/zen/publish/action.yml
+++ b/zen/publish/action.yml
@@ -42,15 +42,17 @@ runs:
         if [ "${{ inputs.os }}" = "windows" ];
         then
           cd squirrel.windows/x64
-          jfrog rt u zowe_enterprise_necessity-1.0.0-full.nupkg ${ARTIFACTORY_REPO}/${REPOSITORY_NAME}/${ZEN_VERSION}-{CURRENT_BRANCH}/zowe_enterprise_necessity-1.0.0-full.nupkg
-          jfrog rt u zowe-enterprise-necessity-1.0.0\ Setup.exe ${ARTIFACTORY_REPO}/${REPOSITORY_NAME}/${ZEN_VERSION}-{CURRENT_BRANCH}/zowe-enterprise-necessity-1.0.0\ Setup.exe
+          jfrog rt u zowe_enterprise_necessity-1.0.0-full.nupkg ${ARTIFACTORY_REPO}/${REPOSITORY_NAME}/${ZEN_VERSION}-${CURRENT_BRANCH^^}/windows/zowe_enterprise_necessity-1.0.0-full.nupkg
+          jfrog rt u zowe-enterprise-necessity-1.0.0\ Setup.exe ${ARTIFACTORY_REPO}/${REPOSITORY_NAME}/${ZEN_VERSION}-${CURRENT_BRANCH^^}/windows/zowe-enterprise-necessity-1.0.0\ Setup.exe
         elif [ "${{ inputs.os }}" = "macos" ];
         then
-          ls
-          cd zip 
-          ls 
+          jfrog rt u zowe-enterprise-necessity-1.0.0-x64.dmg  ${ARTIFACTORY_REPO}/${REPOSITORY_NAME}/${ZEN_VERSION}-${CURRENT_BRANCH^^}/macos/zowe-enterprise-necessity-1.0.0-x64.dmg
         elif [ "${{ inputs.os }}" = "ubuntu" ];
         then
+          ls
+          cd deb 
+          ls
+          cd ../rpm
           ls
         fi
         ls
