Update system apps manifest.yaml
Signed-off-by: James Struga <jstruga@rocketsoftware.com>

--- a/core/prepare/envvars.env
+++ b/core/prepare/envvars.env
@@ -25,3 +25,5 @@ PAX_SSH_PORT=65522
 NODE_VERSION=v16.19.1
 
 MARIST_NODE=/ZOWE/node/node-v16.19.1-os390-s390x
+
+SYSTEM_APPS=admin-notification-app web-browser-app
