--- a/core/prepare/envvars.env
+++ b/core/prepare/envvars.env
@@ -5,14 +5,14 @@ DEFAULT_NODE_VERSION=14
 DEFAULT_NPM_PRIVATE_INSTALL_REGISTRY=https://zowe.jfrog.io/zowe/api/npm/npm-release/
 
 # Nodejs project integration tests
-DEFAULT_FVT_ZOSMF_HOST=zzow04.zowe.marist.cloud
+DEFAULT_FVT_ZOSMF_HOST=zzow08.zowe.marist.cloud
 DEFAULT_FVT_ZOSMF_PORT=10443
 DEFAULT_FVT_SERVER_HOSTNAME=127.0.0.1
 DEFAULT_API_ML_DEBUG_PROFILES=default
 
 # Pax packaging
-DEFAULT_PAX_PACKAGING_SSH_HOST=zzow04.zowe.marist.cloud
-DEFAULT_PAX_PACKAGING_SSH_PORT=22
+DEFAULT_PAX_PACKAGING_SSH_HOST=zzow08.zowe.marist.cloud
+DEFAULT_PAX_PACKAGING_SSH_PORT=65522
 
 GITHUB_PROJECT=zowe
 ARTIFACTORY_REPO=libs-snapshot-local/org/zowe/zlux
@@ -20,10 +20,11 @@ ARTIFACTORY_REPO=libs-snapshot-local/org/zowe/zlux
 #added by me 
 ZOWE_MANIFEST_URL=https://raw.githubusercontent.com/zowe/zowe-install-packaging/staging/manifest.json.template
 
-PAX_HOSTNAME=zzow04.zowe.marist.cloud
-PAX_SSH_PORT=22
-NODE_VERSION=v12.18.4
+PAX_HOSTNAME=zzow08.zowe.marist.cloud
+PAX_SSH_PORT=65522
+NODE_VERSION=v16.20.2
 
-MARIST_NODE=/ZOWE/node/node-v12.18.4-os390-s390x
+MARIST_NODE=/ZOWE/node/node-v16.20.2-os390-s390x
+SYSTEM_APPS=admin-notification-app web-browser-app
 REPOSITORY_NAME=zlux-build
 CURRENT_BRANCH=v2.x/rc
