Fix ncc missing by putting it into package.json
Signed-off-by: 1000TurquoisePogs <sgrady@rocketsoftware.com>

--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "npm-registry": "file:npm-registry",
     "semver": "^7.3.5",
     "zowe-common": "zowe-actions/zowe-common"
+  },
+  "devDependencies": {
+    "@vercel/ncc": "^0.38.1"
   }
 }
