Add release logic for Zen
Signed-off-by: James Struga <jstruga@rocketsoftware.com>

--- a/zen/publish/action.yml
+++ b/zen/publish/action.yml
@@ -4,6 +4,9 @@ inputs:
   os:
     description: 'os'
     required: true
+  perform-release:
+    description: 'perform-release'
+    required: true
 
 runs:
   using: "composite"
