--- a/plugins/zlux-plugins/action.yml
+++ b/plugins/zlux-plugins/action.yml
@@ -4,6 +4,9 @@ inputs:
   build-zss:
     description: 'Does plugins contains zss code'
     required: true
+  clone-v2:
+    description: 'If set to true it will clone v2 into v3'
+    required: false
 
 
 runs:
@@ -101,6 +104,19 @@ runs:
           echo "main.js.gz does not exist."
         fi
       shell: bash
+      
+    - name: 'clone previous version'
+      run: |
+        
+      shell: bash
+      run: |
+        if ${{ inputs.clone-v2 }}
+        then 
+          mkdir -p ../zlux/oldv2
+          cd ../zlux/oldv2
+          git clone https://github.com/zowe/$REPOSITORY_NAME.git -b v2.x/master
+          cp -rf $REPOSITORY_NAME/web ../$REPOSITORY_NAME/web
+        fi
       
     - name: 'package tar'
       run: |
